# dual-ili9341-fbcp

./: CMakeLists.txt  README.md  main.c
